packages/type@9175499/test/error/is.load.js
montageDefine("9175499","test/error/is",{dependencies:["chai","../../error/is"],factory:function(n,e,o){"use strict";var r=n("chai").assert,t=n("../../error/is");describe("error/is",function(){it("Should return true on error",function(){r.equal(t(new Error),!0)}),it("Should return false on native error with no common API exposed",function(){var n=new Error;n.message=null,r.equal(t(n),!1)}),it("Should return false on Error.prototype",function(){r.equal(t(Error.prototype),!1)}),"function"==typeof Object.create&&(it("Should return true on custom built ES5 era error",function(){var n=function(){Error.call(this)};n.prototype=Object.create(Error.prototype),r.equal(t(new n),!0)}),it("Should return false on object with no prototype",function(){r.equal(t(Object.create(null)),!1)})),it("Should return false on plain object",function(){r.equal(t({}),!1)}),it("Should return false on function",function(){r.equal(t(function(){return!0}),!1)}),it("Should return false on array",function(){r.equal(t([]),!1)}),it("Should return false on string",function(){r.equal(t("foo"),!1)}),it("Should return false on empty string",function(){r.equal(t(""),!1)}),it("Should return false on number",function(){r.equal(t(123),!1)}),it("Should return false on NaN",function(){r.equal(t(NaN),!1)}),it("Should return false on boolean",function(){r.equal(t(!0),!1)}),"function"==typeof Symbol&&it("Should return false on symbol",function(){r.equal(t(Symbol("foo")),!1)}),it("Should return false on null",function(){r.equal(t(null),!1)}),it("Should return false on undefined",function(){r.equal(t(void 0),!1)})})}});